retirei alguns codigos inuteis

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,10 +11,10 @@
     <header class="cabecalho">
       <nav>
         <ul class="menu">
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
       <div class="perfil">
@@ -23,7 +23,7 @@
         <p>Full Stack Developer</p>
       </div>
     </header>
-    <main class="principal">
+    <main>
       <section id="about" class="about">
         <div class="bio">
           <h2>About me</h2>
@@ -53,22 +53,12 @@
           />
         </div>
 
-        <!-- <div class="curiosidades">
-                <h2>Curiosidades sobre mim</h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </div> -->
       </section>
       <section class="habilidades">
         <h2>Skills</h2>
         <div class="cards">
           <div>
             <img src="../assets/img/html.png" alt="" />
-            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est placeat sint, tempora quae molestias velit minus eius consequuntur, sunt obcaecati commodi quis. Dolore nesciunt, beatae libero magni corporis quas praesentium.</p> -->
           </div>
           <div>
             <img src="../assets/img/css.png" alt="" />
@@ -100,8 +90,7 @@
             <a
               href="https://scratch.mit.edu/projects/1051565401"
               target="_blank"
-              ><button>Clique aqui para visualizar</button></a
-            >
+              ><button>Clique aqui para visualizar</button></a>
           </div>
         </div>
       </section>
